--- a/css/style.css
+++ b/css/style.css
@@ -3197,17 +3197,17 @@ a {
 
 .participation__recent {
 	background: #7052AD;
-	padding: 21px 17px 0px 21px;
+	padding: 21px 17px 20px 21px;
 	overflow-y: hidden;
 }
 
 .participation__recent-container {
 	max-width: 720px;
 	width: 100%;
-	max-height: 536px;
+	max-height: 400px;
 	height: 100%;
 	padding-top: 10px;
-	padding-bottom: 140px;
+	padding-right: 5px;
 	overflow-y: auto;
 	scroll-snap-type: mandatory;
 	scroll-behavior: smooth;
@@ -3422,6 +3422,8 @@ a {
 	}
 }
 
+
+
 @media (max-width: 768px) {
 	body {
 		padding-top: 60px;
@@ -3488,6 +3490,10 @@ a {
 	.participation__recent-group,
 	.participation__recent-date {
 		font-size: 14px;
+	}
+
+	.participation__recent-container {
+		max-height: 300px;
 	}
 }
 
@@ -3577,6 +3583,9 @@ a {
 	.participation__recent-item+.participation__recent-item {
 		margin-top: 8px;
 	}
+		.participation__recent-container {
+			max-height: 200px;
+		}
 }
 
 @media (max-width: 340px) {
@@ -5377,5 +5386,225 @@ a {
 	.giveaway__timer {
 		max-width: 120px;
 		font-size: 28px;
+	}
+}
+
+
+.privacy-policy-page {
+	padding-top: 100px;
+}
+
+/* scrollbar custom */
+.participation__recent-container::-webkit-scrollbar-track {
+	scrollbar-width: auto;
+	scrollbar-color: #A473E8 transparent;
+	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+	border-radius: 6px;
+	/* background-color: #F5F5F5; */
+	background-color: transparent;
+
+}
+
+.participation__recent-container::-webkit-scrollbar {
+	width: 4px;
+	/* background-color: #F5F5F5; */
+	background-color: transparent;
+}
+
+.participation__recent-container::-webkit-scrollbar-thumb {
+	background-color: #A473E8;
+	border-radius: 4px;
+	border: 0px ridge #ffffff;
+
+}
+
+/* //scrollbar custom */
+.privacy-policy__title-h1 {
+	margin-bottom: 40px;
+	font-size: 36px;
+	font-weight: 800;
+	text-transform: uppercase;
+}
+
+.privacy-policy__block {
+	font-size: 26px;
+	margin-bottom: 40px;
+}
+
+
+.privacy-policy__title {
+	font-size: 32px;
+	font-weight: 700;
+	margin-bottom: 40px;
+	text-transform: uppercase;
+}
+
+.privacy-policy__link {
+	text-decoration: underline;
+}
+
+.privacy-policy__block>ol {
+	padding-left: 30px;
+	font-size: 24px;
+	font-weight: 400;
+}
+
+.privacy-policy__block li>ul {
+	padding-left: 60px;
+}
+
+.privacy-policy__block p+p {
+	padding-top: 15px;
+}
+
+.privacy-policy__block p+ol {
+	margin-top: 15px;
+}
+
+.privacy-policy__block li+li {
+	margin-top: 15px;
+}
+
+.privacy-policy__block li>ul {
+	padding-left: 35px;
+	margin-top: 10px;
+}
+
+.privacy-policy__block li>ul li {
+	list-style-type: disc;
+}
+
+.privacy-policy__block ol {
+	list-style-type: none;
+}
+
+@media (max-width:992px) {
+	.privacy-policy-page {
+		padding-top: 60px;
+	}
+
+	.privacy-policy__title-h1 {
+		margin-bottom: 40px;
+		font-size: 26px;
+	}
+
+	.privacy-policy__title {
+		font-size: 22px;
+		margin-bottom: 10px;
+	}
+
+	.privacy-policy__block {
+		font-size: 18px;
+		margin-bottom: 30px;
+	}
+
+	.privacy-policy__block>ol {
+		font-size: 18px;
+		padding-left: 20px;
+	}
+}
+
+@media (max-width:500px) {
+	.privacy-policy-page {
+		padding-top: 40px;
+	}
+
+	.privacy-policy__title-h1 {
+		margin-bottom: 15px;
+		font-size: 20px;
+	}
+
+	.privacy-policy__title {
+		font-size: 18px;
+	}
+
+	.privacy-policy__block {
+		font-size: 16px;
+		margin-bottom: 40px;
+	}
+
+	.privacy-policy__block>ol {
+		font-size: 16px;
+		padding-left: 20px;
+	}
+
+	.privacy-policy__block li+li {
+		margin-top: 5px;
+	}
+
+	.privacy-policy__link {
+		max-width: 330px;
+		font-size: 14px;
+	}
+}
+
+@media (max-width:420px) {
+	.privacy-policy-page {
+		padding-top: 30px;
+	}
+
+	.privacy-policy__title-h1 {
+		margin-bottom: 15px;
+		font-size: 18px;
+	}
+
+	.privacy-policy__title {
+		font-size: 16px;
+	}
+
+	.privacy-policy__block {
+		font-size: 14px;
+		margin-bottom: 30px;
+	}
+
+	.privacy-policy__block>ol {
+		font-size: 16px;
+		padding-left: 5px;
+	}
+
+	.privacy-policy__block li+li {
+		margin-top: 10px;
+	}
+
+	.privacy-policy__link {
+		max-width: 250px;
+		font-size: 14px;
+	}
+}
+
+
+@media (max-width:380px) {
+	.privacy-policy-page {
+		padding-top: 30px;
+	}
+
+	.privacy-policy__title-h1 {
+		margin-bottom: 15px;
+		font-size: 18px;
+	}
+
+	.privacy-policy__title {
+		font-size: 16px;
+	}
+
+	.privacy-policy__block {
+		font-size: 14px;
+		font-weight: 500;
+		margin-bottom: 30px;
+	}
+
+	.privacy-policy__block>ol {
+		font-size: 14px;
+		padding-left: 5px;
+	}
+
+	.privacy-policy__block li+li {
+		margin-top: 10px;
+	}
+
+	.privacy-policy__link {
+		max-width: 250px;
+		font-size: 14px;
+		word-break: break-all;
 	}
 }
