--- a/css/style.css
+++ b/css/style.css
@@ -1259,7 +1259,7 @@ a {
 	content: "★★★★★";
 	position: absolute;
 	width: 100%;
-	height: 200%;
+	height: 1000px;
 	top: 0;
 	left: 0;
 	color: #ffd300;
@@ -1799,7 +1799,7 @@ a {
 	position: relative;
 }
 
-.intro__info-item::before{
+.intro__info-item::before {
 	content: '';
 	background-image: url('../images/index/slider-blur2.png');
 	background-repeat: no-repeat;
@@ -3675,9 +3675,10 @@ a {
 	.participation__recent-item+.participation__recent-item {
 		margin-top: 8px;
 	}
-		.participation__recent-container {
-			max-height: 200px;
-		}
+
+	.participation__recent-container {
+		max-height: 200px;
+	}
 }
 
 @media (max-width: 340px) {
