--- a/css/style.css
+++ b/css/style.css
@@ -1064,8 +1064,6 @@ a {
 	.header__logo img {
 		max-width: 200px;
 	}
-
-
 }
 
 
@@ -1088,9 +1086,9 @@ a {
 	display: -webkit-box;
 	display: -ms-flexbox;
 	display: flex;
-	-webkit-box-align: baseline;
-	-ms-flex-align: baseline;
-	align-items: baseline;
+	-webkit-box-align: flex-end;
+	-ms-flex-align: flex-end;
+	align-items: flex-end;
 	gap: 30px;
 	margin-bottom: 20px;
 }
@@ -1127,12 +1125,12 @@ a {
 	-webkit-box-pack: center;
 	-ms-flex-pack: center;
 	justify-content: center;
-	width: 120px;
-	height: 60px;
+	width: 80px;
+	height: 40px;
 	background: #FE1717;
 	border-radius: 6px;
 	font-weight: 800;
-	font-size: 26px;
+	font-size: 22px;
 	line-height: 1.3;
 	margin-top: -100px;
 }
@@ -1215,7 +1213,7 @@ a {
 	bottom: 100px;
 	right: 50px;
 	font-weight: 800;
-	font-size: 30px;
+	font-size: 36px;
 	line-height: 37px;
 }
 
@@ -1295,7 +1293,7 @@ a {
 }
 
 .rating-grade {
-	font-size: 26px;
+	font-size: 20px;
 	font-weight: 500;
 }
 
@@ -1315,10 +1313,10 @@ a {
 	}
 
 	.card__sale {
-		height: 40px;
+		height: 35px;
 		margin-top: 0;
-		font-size: 20px;
-		max-width: 80px;
+		font-size: 18px;
+		max-width: 70px;
 		width: 100%;
 	}
 }
@@ -1358,9 +1356,7 @@ a {
 	}
 
 	.card__sale {
-		width: 150px;
-		height: 50px;
-		font-size: 24px;
+		height: 30px;
 	}
 
 	.card__info {
@@ -1418,9 +1414,9 @@ a {
 	}
 
 	.card__sale {
-		width: 80px;
-		height: 35px;
-		font-size: 20px;
+		font-size: 14px;
+		width: 60px;
+		height: 25px;
 	}
 
 	.card__text {
@@ -1454,7 +1450,7 @@ a {
 	.card__price {
 		top: 17px;
 		right: 10px;
-		font-size: 20px;
+		font-size: 22px;
 		line-height: 24px;
 	}
 
@@ -1496,13 +1492,13 @@ a {
 		line-height: 29px;
 		margin-right: 15px;
 	}
-
-	.card__sale {
-		min-width: 60px;
-	}
 }
 
 @media (max-width: 450px) {
+	.card__rating-container {
+		align-items: flex-end;
+	}
+
 	.card__img {
 		max-width: 100%;
 	}
@@ -1513,10 +1509,9 @@ a {
 
 
 	.card__sale {
-		width: 60px;
+		width: 45px;
 		height: 22px;
 		font-size: 12px;
-		line-height: 15px;
 	}
 
 	.card__text {
@@ -1539,7 +1534,7 @@ a {
 	}
 
 	.rating-grade {
-		font-size: 20px;
+		font-size: 14px;
 	}
 }
 
@@ -1731,6 +1726,7 @@ a {
 }
 
 @media (max-width: 450px) {
+
 
 	.article {
 		padding: 0 0 4px 18px;
@@ -2761,7 +2757,7 @@ a {
 		font-size: 20px;
 		bottom: 35px;
 		padding: 6px;
-  }
+	}
 
 	.intro__info-img {
 		height: 150px;
@@ -2901,7 +2897,7 @@ a {
 		margin-bottom: 0;
 		font-size: 16px;
 	}
-	
+
 
 	.logo img {
 		width: 300px;
