--- a/css/style.css
+++ b/css/style.css
@@ -2761,7 +2761,7 @@ a {
 		font-size: 20px;
 		bottom: 35px;
 		padding: 6px;
-  }
+	}
 
 	.intro__info-img {
 		height: 150px;
@@ -2901,7 +2901,7 @@ a {
 		margin-bottom: 0;
 		font-size: 16px;
 	}
-	
+
 
 	.logo img {
 		width: 300px;
@@ -4034,7 +4034,9 @@ a {
 
 .payment-form-footer__links {
 	text-align: right;
+	color: #f9dc1c;
 }
+
 
 .payment-form-footer__link {
 	display: block;
