--- a/css/style.css
+++ b/css/style.css
@@ -828,9 +828,9 @@ main {
 	top: 0;
 	left: 0;
 	max-width: 100%;
-	max-height: 95px;
+	max-height: 70px;
 	width: 100%;
-	padding: 9px 0;
+	padding: 10px 0;
 	z-index: 10;
 	background: #A374E8;
 	-webkit-transition: 0.2s ease;
@@ -849,6 +849,10 @@ main {
 	justify-content: space-between;
 }
 
+.header__logo {
+	max-width: 250px;
+}
+
 .header__menu {
 	display: -webkit-box;
 	display: -ms-flexbox;
@@ -856,7 +860,7 @@ main {
 	-webkit-box-align: center;
 	-ms-flex-align: center;
 	align-items: center;
-	gap: 66px;
+	gap: 50px;
 }
 
 .header__link {
@@ -923,7 +927,7 @@ main {
 	-webkit-box-align: center;
 	-ms-flex-align: center;
 	align-items: center;
-	gap: 44px;
+	gap: 40px;
 }
 
 .header__btn-call {
@@ -950,9 +954,9 @@ main {
 	justify-content: center;
 	max-width: 150px;
 	width: 100%;
-	padding: 12px 30px;
+	padding: 8px 20px;
 	font-weight: 500;
-	font-size: 22px;
+	font-size: 20px;
 	background: #FFFFFF;
 	border-radius: 4px;
 	color: #10021E;
@@ -2366,7 +2370,7 @@ a {
 	display: grid;
 	-ms-grid-columns: (minmax(260px, 1fr))[auto-fit];
 	grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-	gap: 40px 50px;
+	gap: 35px 45px;
 	justify-items: center;
 }
 
@@ -2463,10 +2467,10 @@ a {
 	-ms-flex-pack: justify;
 	justify-content: space-between;
 	background-color: #4E3286;
-	border: 10px solid #A473E8;
+	border: 8px solid #A473E8;
 	border-radius: 22px;
 	width: 260px;
-	height: 352px;
+	height: 340px;
 	position: relative;
 	color: #fff;
 }
@@ -2479,12 +2483,12 @@ a {
 .card-item::before {
 	content: '';
 	width: 260px;
-	height: 352px;
+	height: 340px;
 	background-color: #4E3286;
 	border-radius: 22px;
 	position: absolute;
 	left: -23px;
-	bottom: -22px;
+	bottom: -20px;
 	z-index: -1;
 	-webkit-transition: all .3s;
 	transition: all .3s;
@@ -2503,7 +2507,7 @@ a {
 	-webkit-box-pack: justify;
 	-ms-flex-pack: justify;
 	justify-content: space-between;
-	padding: 12px 0 9px 10px;
+	padding: 10px 0 9px 10px;
 	height: 100%;
 }
 
@@ -2534,13 +2538,13 @@ a {
 }
 
 .card-item__img img {
-	max-width: 285px;
-	max-height: 285px;
+	max-width: 280px;
+	max-height: 280px;
 }
 
 .card-item__name,
 .card-item__price {
-	font-size: 24px;
+	font-size: 22px;
 	text-transform: uppercase;
 	font-weight: 800;
 }
